# kohonen-network-challenge

./: .gitignore  README.md  pyproject.toml
kohonen_challenge/: __init__.py  kohonent_network.py
notebook/: som_example.ipynb
tests/: test_kohonen_challenge.py
