[tool.poetry]
name = "kohonen-challenge"
version = "0.1.0"
description = "\"machine learning challenge from eliiza\""
authors = ["Peng Hao"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
notebook = "^6.1.4"
jupyter = "^1.0.0"
pandas = "^1.1.3"
ipykernel = "^5.3.4"
matplotlib = "^3.3.2"
numba = "^0.51.2"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
